--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <div class="instagram_wrapper">
             <div class="instagram_phone">
-                <img src="celular.png" alt="celular">
+                <img src="img/celular.png" alt="celular">
             </div>
             <div class="instagram_continue">
                 <div class="group">
-                    <img src="instagram_logo.png" class="instagram_logo" alt="instagram logo">
+                    <img src="img/instagram_logo.png" class="instagram_logo" alt="instagram logo">
                     <div class="profile_photo">
-                        <img src="ca.jpg" alt="foto de perfil">
+                        <img src="img/ca.jpg" alt="foto de perfil">
                     </div>
                     <a href="#" class="instagram_login">Continue como caoliveira88</a>
                     <a href="#" class="instagram_logout">Remover conta</a>
